# Trans4SCIF

./: CMakeLists.txt  LICENSE  README.md  constants.hpp  main.cpp  rmawindow.cpp  rmawindow.hpp  rmawindowref.hpp  scifepd.hpp  scifnode.cpp  scifnode.hpp  virt_circbuf.cpp  virt_circbuf.hpp
include/: scifepd.h  trans4scif.h  trans4scif.hpp  trans4scif_config.hpp.in
scripts/: build_host_mic.sh
src/: CMakeLists.txt  circbuf.cpp  circbuf.h  circbuf.hpp  constants.h  constants.hpp  ctl_messages.cpp  ctl_messages.h  ctl_messages.hpp  hbsocket.cpp  hbsocket.h  main.cpp  mmapmem.cpp  mmapmem.h  record.h  rmarecords.cpp  rmarecords.h  rmarecordsreader.cpp  rmarecordsreader.h  rmarecordswriter.cpp  rmarecordswriter.h  rmawindow.cpp  rmawindow.h  rmawindow.hpp  rmawindow_factory.hpp  scifepd.h  scifepd.hpp  scifnode.cpp  scifnode.h  scifnode.hpp  trans4node.cpp  trans4node.hpp  trans4scif.cpp  trans4scif_config.h.in  util.cpp  util.h  util.hpp  virt_circbuf.cpp  virt_circbuf.h  virt_circbuf.hpp
test/: CMakeLists.txt  catch.hpp  test_circbuf.cpp  test_common.h  test_ctl_messages.cpp  test_hbsocket.cpp  test_rmarecords.cpp  test_scifnode.cpp  test_trans4scif.cpp  test_util.cpp  test_version.cpp
unittest/: Makefile  circ_buffer_test.cpp  common.cpp  common.hpp  ctl_messages_test.cpp  main.cpp  make_run.sh  scif_node_test.cpp  test_trans4_internals.cpp  trans4_test.cpp  util_test.cpp
